# Order-Matching-Engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
engine_src/: common.hpp  core.cpp
engine_src/order/: Order.cpp  OrderHandler.cpp  OrderHandler.hpp  comparators.hpp  order_definitions.hpp
engine_src/order/tests/: CMakeLists.txt  order_handler_test.cpp  order_object_test.cpp
src/: CMakeLists.txt  common.hpp  core.cpp  core.h  core.hpp  order_handler.cpp
src/order/: order.cpp  order.hpp  order_handler.cpp  order_handler.hpp
src/order/tests/: CMakeLists.txt  order_object_test.cpp
